<resources>
    <string name="app_name">MiniPerimeter</string>
    <string name="please_password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="back">返回</string>
    <string name="home">首页</string>
    <string name="system_setting">系统配置</string>
    <string name="modify_password">修改密码</string>
    <string name="setpower">功率设置</string>
    <string name="line_length_set">线长设置</string>
    <string name="power_set">功率设置</string>
    <string name="sensitivity_set">敏感度设置</string>
    <string name="reset_standardLine">复位基线</string>
    <string name="alarm_set">告警设置</string>
    <string name="system_update">系统升级</string>
    <string name="about">关于</string>
    <string name="please_newPassword_hint">请输入新密码</string>
    <string name="please_newPassword_affirm_hint">请再次输入新密码</string>
    <string name="save">保存</string>
    <string name="please_host_hint">请输入服务器地址</string>
    <string name="register_name_digits">:/._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="cancel">取消</string>
    <string name="please_camera_alias">请输入摄像机别名</string>
    <string name="device_stauts">设备状态</string>
    
    <string name="home_monitor_title">实时监控</string>
    <string name="logout">退出登录</string>
    <string name="save_password">记住密码</string>
    <string name="auto_login">自动登录</string>
</resources>
