<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/login_bg"
                android:fitsSystemWindows="true"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:src="@mipmap/login_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@id/iv_icon"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_host"
            android:layout_width="236dp"
            android:layout_height="45dp"
            android:layout_below="@id/iv_icon"
            android:layout_marginTop="81dp"
            android:background="@drawable/login_edit"
            android:digits="@string/register_name_digits"
            android:hint="@string/please_host_hint"
            android:inputType="text"
            android:maxLength="30"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/login_edittext_hint_color"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="236dp"
            android:layout_height="45dp"
            android:layout_below="@id/iv_icon"
            android:layout_marginTop="13dp"
            android:background="@drawable/login_edit"
            android:hint="@string/please_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/login_edittext_hint_color"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cb_is_save_password"
                android:button = "@drawable/checkbox_bg"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
            <TextView
                android:text="@string/save_password"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:layout_marginLeft="5dp"
                android:id="@+id/cb_is_auto_login"
                android:button = "@drawable/checkbox_bg"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
            <TextView
                android:text="@string/auto_login"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:id="@+id/bt_next_step"
            android:layout_width="236dp"
            android:layout_height="45dp"
            android:layout_below="@id/et_password"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_login_bg"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@color/button_bg"
            android:textSize="20sp"/>

    </LinearLayout>


</RelativeLayout>
