<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:fitsSystemWindows="true"
              android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignRight="@+id/tv_newPassword_affirm"
                android:gravity="center_vertical"
                android:text="原密码:"
                android:textColor="@color/modify_password_text_color"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="265dp"
                android:layout_height="40dp"
                android:layout_alignTop="@id/tv_password"
                android:layout_marginLeft="12.5dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@id/tv_password"
                android:background="@drawable/modify_password_edit"
                android:hint="@string/please_password_hint"
                android:inputType="textPassword"
                android:maxLength="10"

                android:paddingLeft="5dp"/>

            <TextView
                android:id="@+id/tv_newPassword"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignRight="@+id/tv_newPassword_affirm"
                android:layout_below="@id/tv_password"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="新密码:"
                android:textColor="@color/modify_password_text_color"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/et_newPassword"
                android:layout_width="265dp"
                android:layout_height="40dp"
                android:layout_alignTop="@id/tv_newPassword"
                android:layout_marginLeft="12.5dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@id/tv_newPassword"
                android:background="@drawable/modify_password_edit"
                android:hint="@string/please_newPassword_hint"
                android:inputType="textPassword"
                android:maxLength="10"
                android:paddingLeft="5dp"/>

            <TextView
                android:id="@+id/tv_newPassword_affirm"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/tv_newPassword"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="确认新密码:"
                android:textColor="@color/modify_password_text_color"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/et_newPassword_affirm"
                android:layout_width="265dp"
                android:layout_height="40dp"
                android:layout_alignTop="@id/tv_newPassword_affirm"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="12.5dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@id/tv_newPassword_affirm"
                android:background="@drawable/modify_password_edit"
                android:hint="@string/please_newPassword_affirm_hint"
                android:inputType="textPassword"
                android:maxLength="10"
                android:paddingLeft="5dp"/>

            <Button
                android:id="@+id/bt_save"
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:layout_alignLeft="@id/et_newPassword_affirm"
                android:layout_below="@id/tv_newPassword_affirm"
                android:layout_marginTop="14dp"
                android:background="@drawable/btn_configuration_bg"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/bt_cancel"
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:layout_alignTop="@id/bt_save"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/bt_save"
                android:background="@drawable/btn_configuration_bg"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </RelativeLayout>

    </LinearLayout>

    <include layout="@layout/activity_titlebar"/>
</LinearLayout>